fixed scrollbar shift

--- a/slack/stylesheets/index.css
+++ b/slack/stylesheets/index.css
@@ -12,6 +12,8 @@ html, body {
   -webkit-font-smoothing: antialiased;
   font-weight: 400;
   color: #2c2d30;
+  /* Prevent scrollbar from shifting the page */
+  overflow-y: scroll;
 }
 
 *, *:before, *:after {
